--- a/estilos/style.css
+++ b/estilos/style.css
@@ -41,35 +41,49 @@ header
 
 #menuicon
 {
-    z-index: 1;
     font-size: 2.5em;
     color: #ffffff;
 
     width: 100%;
     text-align: center;
     margin-top: 450px;
+
+    cursor: pointer;
 }
 
 #miBorder
 {
     pointer-events: none;
-
     position: absolute;
     left: 50%;
     transform: translate(-50%, -95%);
 
-    border: 2px solid white;
+    border: 2px solid #ffffff;
     border-radius: 20px;
-    box-shadow: 0px 0px 12.5px 1px rgba(255, 255, 255, 0.3);
+    box-shadow: 0px 0px 12.5px 1px #ffffff4d;
 
     width: 100px;
     height: 50px;
     
 }
 
+#insideicon
+{
+    visibility: hidden;
+    color: #000000;
+    font-size: 2.5em;
+    width: 100%;
+    text-align: center;
+}
+
 #menuicon:hover
 {
     cursor: pointer;
+}
+
+#menuicon:active
+{
+    color: #000000;
 }
 
 menu
