--- a/estilos/style.css
+++ b/estilos/style.css
@@ -43,11 +43,17 @@ header
 {
     font-size: 2.5em;
     color: #ffffff;
+    
 
     width: 100%;
     text-align: center;
     margin-top: 450px;
 
+    cursor: pointer;
+}
+
+#menuicon:hover
+{
     cursor: pointer;
 }
 
@@ -76,14 +82,9 @@ header
     text-align: center;
 }
 
-#menuicon:hover
+#menuicon::selection, #miBorder::selection, #insideicon::selection
 {
-    cursor: pointer;
-}
-
-#menuicon:active
-{
-    color: #000000;
+    background-color: #00000000;
 }
 
 menu
@@ -126,12 +127,19 @@ section
 {
     display: flex;
     flex-direction: column;
+    align-items: center;
     background-color: #000000d2;
     border: 2px solid #c9c9c9;
     border-radius: 50px;
     margin: 50px;
     padding: 25px;
     box-shadow: 0px 0px 12.5px 1px rgba(255, 255, 255, 0.3);
+}
+
+section img
+{
+    max-width: 300px;
+    height: auto;
 }
 
 section p
