--- a/estilos/medias.css
+++ b/estilos/medias.css
@@ -62,7 +62,13 @@
     li:hover
     {
         transform: scale(110%);
-        transition-duration: 0.35s;
+        transition-duration: 0.25s;
+    }
+
+    li:active
+    {
+        transform: scale(98%);
+        transition-duration: 0.25s;
     }
 
     /* ============================================================ */
