--- a/estilos/medias.css
+++ b/estilos/medias.css
@@ -1,10 +1,47 @@
 @charset "UTF-8";
 
-@media screen and (min-width: 768px)
+@media screen and (min-width: 768px) /* TABLETS */
 {
+    menu
+    {
+        display: flex;
+        flex-direction: column;
+    }
+
+    menu .bar
+    {
+        order: 1;
+    }
+
+    menu ul
+    {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .navButton
+    {
+        border-radius: 8px;
+        padding: 20px;
+    }
+
+    .navButton:active
+    {
+        background-color: #ffffff21;
+        background-image: none;
+        transition-duration: 0.25s;
+    }
+
+    #menuicon, #menuBorder
+    {
+        display: none;
+    }
+
     #container
     {
-        width: 70%;
+        width: 80%;
     }
 
     section
@@ -12,17 +49,22 @@
         margin: 75px;
     }
 
-    section p 
+    .msg
     {
         max-width: 500px;
         padding: 15px;
-        font-size: 1.15rem;
+        font-size: 1.25rem;
         line-height: 1.85rem;
     }
 }
 
-@media screen and (min-width: 992px)
+@media screen and (min-width: 992px) /* DESKTOP */
 {
+    #menuButtonArea
+    {
+        height: 0px;
+    }
+
     #menuicon, #miBorder
     {
         display: none;
@@ -36,15 +78,16 @@
 
     menu
     {
-        display: block;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
 
-        border: 1px solid white;
-        background-color: #000000d2;
-        box-shadow: 0px 0px 12.5px 1px rgba(255, 255, 255, 0.3);
-        border-radius: 20px;
-
-        margin-top: 10px;
-        width: 60%;
+    menu .bar
+    {
+        order: 1;
+        background-image: linear-gradient(to right, #ffffff00, #ffffff7e, #ffffff00);
     }
 
     menu ul
@@ -52,48 +95,89 @@
         display: flex;
         flex-direction: row;
         justify-content: space-evenly;
+        align-items: center;
+        width: 700px;
     }
 
-    li
+    .navButton
     {
-        padding: 5px 10px;
+        padding: 10px;
+        font-size: 1.1rem;
+        position: relative;
+
+        border: none;
+        background-color: none;
+        border-radius: 8px;
+
+        font-family: "Inter", sans-serif;
+        font-weight: 200;
     }
 
-    li:hover
+    .navButton::after
     {
-        transform: scale(110%);
-        transition-duration: 0.25s;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        content: " ";
+
+        width: 0%;
+        height: 2px;
+
+        background-image: linear-gradient(to right, #ffffff00, #ffffff94);
+        transition: all 0.2s ease-in-out;
     }
 
-    li:active
+    .navButton:hover::after
+    {
+        width: 90%;
+    }
+
+    .navButton:active
     {
         transform: scale(98%);
+        background-color: #ffffff00;
         transition-duration: 0.25s;
     }
 
     /* ============================================================ */
 
-    #container
-    {
-        width: 85%;
-    }
-
     section
     {
         margin: 75px;
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         justify-content: space-around;
         align-items: center;
     }
 
-    section img
+    .title
+    {
+        font-size: 1.75rem;
+        position: absolute;
+        background-color: #00000000;
+    }
+
+    section .bar
+    {
+        width: 100%;
+        margin-bottom: 12px;
+        -webkit-mask: radial-gradient(circle, transparent 25%, #000000 26%);
+        mask: radial-gradient(circle, transparent 25%, #000000 26%);
+    }
+
+    .down
+    {
+        flex-direction: row;
+        justify-content: center;
+    }
+
+    .image
     {
         max-width: 300px;
         height: auto;
     }
 
-    section p 
+    .msg
     {
         max-width: 500px;
         padding: 15px;
